manifests/system/oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    name: oauth2-proxy
